Code cleanup
resolve IDEA inspection warnings
replace "target" class-based descriptors with "method" absolute descriptors
make method descriptors complete
remove "cancellable" from uncanceled injectors
add missing @Final annotations
add missing "remap=false" arguments
make mixin internal fields and methods private